# yolov8_deploy

./: CMakeLists.txt  README.md  main.cpp
models/: yolov8n-seg.mapping  yolov8n-seg.xml
modules/: common.h  flag_header.h
modules/detect/: common.h
modules/detect/OpenVINO/: detect.h
modules/detect/onnx/: detect.h
modules/pose/: common.h
modules/pose/OpenVINO/: pose.h
modules/pose/onnx/: pose.h
modules/segment/: common.h
modules/segment/OpenVINO/: segment.h
modules/segment/onnx/: segment.h
